Added LoadBalancer type to service for ingress definition, working.

--- a/content-web/content-web.yaml
+++ b/content-web/content-web.yaml
@@ -30,7 +30,7 @@ metadata:
   labels:
     app: content-web
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - port: 3000
     targetPort: 3000
